[tool.poetry]
name = "llm-benchmarks"
version = "0.1.0"
description = "A sample Python app for investigating the LLM benchmarks dataset from Kaggle"
authors = ["Jim Bennett <jim@pieces.app>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
psutil = "^6.0.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
